--- a/stylesheets/scss/_content-formatted.scss
+++ b/stylesheets/scss/_content-formatted.scss
@@ -68,6 +68,7 @@
   h1 {
     text-align: center;
     font-size: 36px;
+    line-height: 1.05;
 
     @include query($mobile-1) {
       font-size: 32px;
