--- a/stylesheets/scss/_content.scss
+++ b/stylesheets/scss/_content.scss
@@ -311,6 +311,7 @@
       top: 0;
       right: 0;
       left: 0;
+      z-index: 30002;
     }
 
     .main-feature {
