--- a/stylesheets/scss/_menus.scss
+++ b/stylesheets/scss/_menus.scss
@@ -329,13 +329,13 @@
           font-size: $font-size-xs;
           line-height: normal;
           margin-left: 9px;
-          margin-top: 1px;
 
           > .menu-link {
             display: inline-block;
-            padding: 6px 12px;
+            padding: 8px 12px;
             text-transform: uppercase;
             font-weight: $font-weight-normal;
+            line-height: 1;
             border: 2px solid transparent;
 
             &:hover {
@@ -833,8 +833,9 @@ $flags:
 
     .menu-item {
       margin-top: 8px;
-      padding: 5px 10px;
+      padding: 8px 10px;
       font-size: 13px;
+      line-height: normal;
       background-color: transparent;
 
       @include query($tablet-2) {
